Fixed the strange bugs, added Overview, Delete, Details and Create++ Functionality Next up: Update on Detail Window

--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
@@ -178,8 +178,6 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Tamagotchi\Index.cshtml" />
-    <Content Include="Views\Tamagotchi\Create.cshtml" />
     <Content Include="Views\Tamagotchis\Index.cshtml" />
     <None Include="Service References\TamagotchiService\TamagotchiService.wsdl" />
     <None Include="Service References\TamagotchiService\TamagotchiService.xsd">
@@ -191,6 +189,9 @@
     <None Include="Service References\TamagotchiService\TamagotchiService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Tamagotchis\Create.cshtml" />
+    <Content Include="Views\Tamagotchis\BulkCreation.cshtml" />
+    <Content Include="Views\Tamagotchis\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
