--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.Domain/App.config
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.Domain/App.config
@@ -11,5 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-   <add name="Entities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=prog6-eindopdrachtserver.database.windows.net;initial catalog=Prog6_EindopdrachtDB;persist security info=True;user id=MaartenBen;password=Ben94Maarten96;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="Prog6_Entities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=prog6-eindopdrachtserver.database.windows.net;initial catalog=Prog6_EindopdrachtDB;persist security info=True;user id=MaartenBen;password=Ben94Maarten96;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
