--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
@@ -133,6 +133,11 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\dead.gif" />
+    <Content Include="Content\images\happy.gif" />
+    <Content Include="Content\images\hungry.gif" />
+    <Content Include="Content\images\poop.gif" />
+    <Content Include="Content\images\sleepy.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
