--- a/Prog6_EindOpdracht/TamagotchiUpdateService/TamagotchiUpdateService.csproj
+++ b/Prog6_EindOpdracht/TamagotchiUpdateService/TamagotchiUpdateService.csproj
@@ -7,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0BEE516B-369A-479D-9FBE-05711E0DB594}</ProjectGuid>
+    <ProjectGuid>{CF28BB86-F4D3-4560-B8FD-95B1B7C9C529}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TamagotchiService</RootNamespace>
-    <AssemblyName>TamagotchiService</AssemblyName>
+    <RootNamespace>TamagotchiUpdateService</RootNamespace>
+    <AssemblyName>TamagotchiUpdateService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <UseIISExpress>true</UseIISExpress>
@@ -39,15 +39,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -67,81 +59,45 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\DataModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DataModel.edmx</DependentUpon>
-      <LastGenOutput>DataModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Data\DataModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DataModel.edmx</DependentUpon>
-      <LastGenOutput>DataModel.cs</LastGenOutput>
-    </Content>
-    <Content Include="TamagotchiService.svc" />
+    <None Include="Service References\TamagotchiService\TamagotchiService.disco" />
+    <None Include="Service References\TamagotchiService\configuration91.svcinfo" />
+    <None Include="Service References\TamagotchiService\configuration.svcinfo" />
+    <None Include="Service References\TamagotchiService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="TamagotchiUpdateService.svc" />
     <Content Include="Web.config" />
+    <None Include="Service References\TamagotchiService\TamagotchiService.wsdl" />
+    <None Include="Service References\TamagotchiService\TamagotchiService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Service References\TamagotchiService\TamagotchiUpdateService.TamagotchiService.Tamagotchi.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions\ActionEnum.cs" />
-    <Compile Include="Actions\ActionManager.cs" />
-    <Compile Include="Actions\Clean.cs" />
-    <Compile Include="Actions\Feed.cs" />
-    <Compile Include="Actions\IAction.cs" />
-    <Compile Include="Actions\Play.cs" />
-    <Compile Include="Actions\Sleep.cs" />
-    <Compile Include="Data\DataModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Data\DataModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Data\DataModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Data\Tamagotchi.cs">
-      <DependentUpon>DataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Extensions\Extensions.cs" />
-    <Compile Include="Factories\ActionFactory.cs" />
-    <Compile Include="Factories\TamagotchiFactory.cs" />
-    <Compile Include="ITamagotchiService.cs" />
+    <Compile Include="ITamagotchiUpdateService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Factories\RuleFactory.cs" />
-    <Compile Include="Rules\RuleEnum.cs" />
-    <Compile Include="Update\BoredomIncrease.cs" />
-    <Compile Include="Rules\Crazy.cs" />
-    <Compile Include="Rules\IRule.cs" />
-    <Compile Include="Rules\Lethargic.cs" />
-    <Compile Include="Rules\Munchies.cs" />
-    <Compile Include="Update\HungerIncrease.cs" />
-    <Compile Include="Update\IPropertyIncreaser.cs" />
-    <Compile Include="Rules\Starving.cs" />
-    <Compile Include="TamagotchiService.svc.cs">
-      <DependentUpon>TamagotchiService.svc</DependentUpon>
+    <Compile Include="Service References\TamagotchiService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Update\SleepIncrease.cs" />
-    <Compile Include="Update\UpdateManager.cs" />
+    <Compile Include="TamagotchiUpdateService.svc.cs">
+      <DependentUpon>TamagotchiUpdateService.svc</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
-    <EntityDeploy Include="Data\DataModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DataModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Data\DataModel.edmx.diagram">
-      <DependentUpon>DataModel.edmx</DependentUpon>
-    </Content>
-    <None Include="Properties\PublishProfiles\Prog6EindOpdrachtMaartenBen - Web Deploy %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\Prog6EindOpdrachtMaartenBen - Web Deploy.pubxml" />
-    <None Include="Properties\PublishProfiles\TamagotchiServiceBenMaarten - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -150,7 +106,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\TamagotchiService\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -165,9 +124,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>9542</DevelopmentServerPort>
+          <DevelopmentServerPort>11279</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:9542/</IISUrl>
+          <IISUrl>http://localhost:11279/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
