Finished DI framework, values can now be changed on the fly, still need to add buttons and sliders to ASP

--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
@@ -197,6 +197,9 @@
     <Content Include="Views\Tamagotchis\Create.cshtml" />
     <Content Include="Views\Tamagotchis\BulkCreation.cshtml" />
     <Content Include="Views\Tamagotchis\Details.cshtml" />
+    <None Include="Service References\TamagotchiService\TamagotchiService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
