--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.Updater/App.config
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.Updater/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ITamagotchiService" />
+                <binding name="BasicHttpsBinding_ITamagotchiService">
+                    <security mode="Transport" />
+                </binding>
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://tamagotchiservicebenmaarten.azurewebsites.net/TamagotchiService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITamagotchiService"
+                contract="TamagotchiService.ITamagotchiService" name="BasicHttpBinding_ITamagotchiService" />
+        </client>
+    </system.serviceModel>
 </configuration>
