--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.Updater/Prog6_Eindopdracht.Updater.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.Updater/Prog6_Eindopdracht.Updater.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,12 +45,51 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\TamagotchiService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Service References\TamagotchiService\Prog6_Eindopdracht.Updater.TamagotchiService.Tamagotchi.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService.wsdl" />
+    <None Include="Service References\TamagotchiService\TamagotchiService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\TamagotchiService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\TamagotchiService\TamagotchiService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\TamagotchiService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\TamagotchiService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\TamagotchiService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
