--- a/Prog6_EindOpdracht/TamagotchiService/TamagotchiService.csproj
+++ b/Prog6_EindOpdracht/TamagotchiService/TamagotchiService.csproj
@@ -46,8 +46,19 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\packages\SimpleInjector.3.3.2\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector.Integration.Wcf">
+      <HintPath>..\packages\SimpleInjector.Integration.Wcf.3.3.2\lib\net40\SimpleInjector.Integration.Wcf.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -65,6 +76,9 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebActivator">
+      <HintPath>..\packages\WebActivator.1.4.4\lib\net40\WebActivator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\DataModel.Context.tt">
@@ -106,7 +120,9 @@
     <Compile Include="Data\Tamagotchi.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\Bootstrapper.cs" />
     <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\WcfServiceFactory.cs" />
     <Compile Include="Factories\ActionFactory.cs" />
     <Compile Include="Factories\TamagotchiFactory.cs" />
     <Compile Include="ITamagotchiService.cs" />
