--- a/Prog6_EindOpdracht/TamagotchiService/packages.config
+++ b/Prog6_EindOpdracht/TamagotchiService/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="SimpleInjector" version="3.3.2" targetFramework="net45" />
+  <package id="SimpleInjector.Integration.Wcf" version="3.3.2" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
 </packages>
