--- a/Prog6_EindOpdracht/TamagotchiService/TamagotchiService.csproj
+++ b/Prog6_EindOpdracht/TamagotchiService/TamagotchiService.csproj
@@ -37,6 +37,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
@@ -158,6 +159,7 @@
     <None Include="Properties\PublishProfiles\Prog6EindOpdrachtMaartenBen - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\Prog6EindOpdrachtMaartenBen - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\TamagotchiServiceBenMaarten - Web Deploy.pubxml" />
+    <Content Include="Properties\webjobs-list.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -193,6 +195,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <Import Project="..\packages\Microsoft.Web.WebJobs.Publish.1.0.12\tools\webjobs.targets" Condition="Exists('..\packages\Microsoft.Web.WebJobs.Publish.1.0.12\tools\webjobs.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
