--- a/Prog6_EindOpdracht/TamagotchiService/packages.config
+++ b/Prog6_EindOpdracht/TamagotchiService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net45" />
   <package id="SimpleInjector" version="3.3.2" targetFramework="net45" />
   <package id="SimpleInjector.Integration.Wcf" version="3.3.2" targetFramework="net45" />
   <package id="WebActivator" version="1.4.4" targetFramework="net45" />
