Added full functionality to dynamically change values Added Settings class and implemeted WPF project. TODO: Add View buttons and support for Settings, testing and WPF testing

--- a/Prog6_EindOpdracht/TamagotchiUpdater/TamagotchiUpdater.csproj
+++ b/Prog6_EindOpdracht/TamagotchiUpdater/TamagotchiUpdater.csproj
@@ -101,6 +101,12 @@
     <None Include="Service References\TamagotchiService\TamagotchiService3.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\TamagotchiService\TamagotchiService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TamagotchiService\TamagotchiUpdater.TamagotchiService.Settings.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\TamagotchiService\TamagotchiUpdater.TamagotchiService.Tamagotchi.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
