--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\SettingsModel.cs" />
     <Compile Include="Models\TamagotchiModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TamagotchiService\Reference.cs">
@@ -160,6 +161,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Service References\TamagotchiService\Prog6_Eindopdracht.ASP.TamagotchiService.Tamagotchi.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\TamagotchiService\Prog6_Eindopdracht.ASP.TamagotchiService.Settings.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Service References\TamagotchiService\TamagotchiService.disco" />
@@ -202,6 +206,10 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Tamagotchis\Reset.cshtml" />
+    <Content Include="Views\Tamagotchis\Settings.cshtml" />
+    <None Include="Service References\TamagotchiService\TamagotchiService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
