--- a/Prog6_EindOpdracht/packages/repositories.config
+++ b/Prog6_EindOpdracht/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Prog6_Eindopdracht.ASP\packages.config" />
   <repository path="..\Prog6_Eindopdracht.Domain\packages.config" />
   <repository path="..\Prog6_Eindopdracht.Tests\packages.config" />
+  <repository path="..\Prog6_Eindopdracht.WPF1\packages.config" />
   <repository path="..\TamagotchiService\packages.config" />
   <repository path="..\TamagotchiUpdater\packages.config" />
 </repositories>
