Added Buttons for Actions, Settings page and fixed Reset View. TODO: Rewrite path into TamagotchiModel, Add validation in SettingsModel, deploy TestProject and Fix CountdownAndAction returned

--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Prog6_Eindopdracht.ASP.csproj
@@ -205,11 +205,13 @@
     <None Include="Service References\TamagotchiService\TamagotchiService3.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Views\Tamagotchis\Reset.cshtml" />
     <Content Include="Views\Tamagotchis\Settings.cshtml" />
     <None Include="Service References\TamagotchiService\TamagotchiService4.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Tamagotchis\Reset.cshtml" />
+    <Content Include="Views\Tamagotchis\SettingsSucces.cshtml" />
+    <Content Include="Views\Tamagotchis\ActionFailed.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
