--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.Tests/Prog6_Eindopdracht.Tests.csproj
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.Tests/Prog6_Eindopdracht.Tests.csproj
@@ -83,8 +83,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action\CleanTest.cs" />
+    <Compile Include="Action\FeedTest.cs" />
+    <Compile Include="Action\PlayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Rules\CrazyTest.cs" />
+    <Compile Include="Rules\LethargicTest.cs" />
+    <Compile Include="Rules\MunchiesTest.cs" />
+    <Compile Include="Rules\StarvingTest.cs" />
+    <Compile Include="Action\SleepTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -93,9 +100,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Prog6_Eindopdracht.ASP\Prog6_Eindopdracht.ASP.csproj">
-      <Project>{75642358-CDF4-48D3-A873-FF0114F94819}</Project>
-      <Name>Prog6_Eindopdracht.ASP</Name>
+    <ProjectReference Include="..\TamagotchiService\TamagotchiService.csproj">
+      <Project>{0bee516b-369a-479d-9fbe-05711e0db594}</Project>
+      <Name>TamagotchiService</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
